--- a/index.html
+++ b/index.html
@@ -1,2 +1,27 @@
-Hello World
-OH HERRO
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Doil's Code</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
+<body style = "background-color:#202020">
+
+<!--Footer that is going to be in the Shared for ASP.NET-->
+<div class = "modal-footer navbar-fixed-bottom">
+	<ul class ="nav navbar-nav" style = "font-family:lato; padding-top:-20px; margin-top:-20px; padding-bottom: -20px; margin-bottom:-20px; padding-left: -10px; margin-left:-10px" >
+		<li><a href="#about"><font size = "2"><strong>About</strong></font></a></li>
+		<li><a href="#contact"><font size = "2"><strong>Contact</strong></font></a></li>
+		<li><a href="#termofuse"><font size = "2"><strong>Term of Use</strong></font></a></li>
+		<li><a href="#help"><font size = "2"><strong>Help</strong></font></a></li>
+
+	</ul>
+	</div>
+	
+</body>
+</html>
